--- a/Js-en-couches/bll/Js-en-couches.html
+++ b/Js-en-couches/bll/Js-en-couches.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Les savoirs inutiles</title>
-    <script src="../js/TPModule3.js"></script>
     <link rel="stylesheet" type="text/css" href="TPTheme3.css">
 </head>
 <body>
@@ -36,6 +35,14 @@
     </div>
 </body>
 </html>
+
 <script src="../bo/library.js"></script>
+<script src="../js/services.js"></script>
+<script src="../js/metiers.js"></script>
+<script src="../js/controler.js"></script>
 
 
+<!-- Ancienne méthode avec un seul fichier js
+
+    <script src="../js/controler.js"></script>
+-->
