Add css files. Marc Harnist

--- a/Js-en-couches/bll/Js-en-couches.html
+++ b/Js-en-couches/bll/Js-en-couches.html
@@ -37,11 +37,9 @@
 </html>
 
 <script src="../bo/library.js"></script>
-<script src="../js/services.js"></script>
-<script src="../js/metiers.js"></script>
-<script src="../js/controler.js"></script>
-
-
+<script src="js/services.js"></script>
+<script src="js/metiers.js"></script>
+<script src="js/controler.js"></script>
 <!-- Ancienne méthode avec un seul fichier js
 
     <script src="../js/controler.js"></script>
