--- a/Js-en-couches/bll/Js-en-couches.html
+++ b/Js-en-couches/bll/Js-en-couches.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Les savoirs inutiles</title>
-    <link rel="stylesheet" type="text/css" href="TPTheme3.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
     <div id="divSaisie">
